--- a/.github/workflows/archi.yml
+++ b/.github/workflows/archi.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
-        version: latest
+        version: 7
 
     - name: Verify Node.js
       run: node -v
