--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "esgst",
-	"version": "8.10.5",
-	"betaVersion": "8.10.5",
+	"version": "8.10.6",
+	"betaVersion": "8.10.6",
 	"title": "Enhanced SteamGifts & SteamTrades (ESGST Potatoe edition)",
 	"description": "A script that adds some cool features to SteamGifts and SteamTrades.",
 	"author": "rafaelgomesxyz",
@@ -14,15 +14,21 @@
 		"url": "git+https://github.com/SquishedPotatoe/esgst.git"
 	},
 	"scripts": {
+		"analyze-extensions": "webpack --env.production --env.analyzeExtensions",
+		"analyze-userscript": "webpack --env.production --env.analyzeUserscript --config-name userscript-unminified",
 		"build": "webpack --env.production",
 		"build-dev": "webpack --env.development",
 		"start": "webpack --env.development --env.withWatch",
 		"build-webextension": "webpack --env.production --config-name webextension",
 		"build-dev-webextension": "webpack --env.development --config-name webextension",
 		"start-webextension": "webpack --env.development --env.withWatch --config-name webextension",
-		"build-userscript": "webpack --env.production --config-name userscript",
-		"build-dev-userscript": "webpack --env.development --config-name userscript",
-		"start-userscript": "webpack --env.development --env.withWatch --config-name userscript",
+		"build-userscript-minified": "webpack --env.production --config-name userscript-minified",
+		"build-userscript-unminified": "webpack --env.production --config-name userscript-unminified",
+		"build-userscripts": "webpack --env.production --config-name userscript-minified && webpack --env.production --config-name userscript-unminified",
+		"build-dev-userscript-minified": "webpack --env.development --config-name userscript-minified",
+		"build-dev-userscript-unminified": "webpack --env.development --config-name userscript-unminified",
+		"build-dev-userscripts": "webpack --env.development --config-name userscript-minified && webpack --env.development --config-name userscript-unminified",
+		"start-userscript": "webpack --env.development --env.withWatch --config-name userscript-unminified",
 		"generate-release": "node ./scripts/generateRelease.js",
 		"notify-issue": "node ./scripts/notifyIssue.js",
 		"update-emojis": "node ./scripts/updateEmojis.js",
@@ -45,26 +51,23 @@
 		"test": "cross-env NODE_ENV=test karma start"
 	},
 	"@comment dependencies": {
-		"interactjs": "Any version higher than 1.3.4 breaks filters",
-		"jquery": "3.5.1 is breaking filters",
 		"jszip": "Any version higher than 3.3.0 breaks the extension on Pale Moon"
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.11.2",
-		"awesome-bootstrap-checkbox": "^0.3.7",
-		"bootstrap": "^3.4.1",
-		"core-js": "^3.6.5",
-		"date-fns": "^2.15.0",
+		"awesome-bootstrap-checkbox": "^2.0.1",
+		"bootstrap": "^5.3.8",
+		"core-js": "^3.46.0",
+		"date-fns": "^2.30.0",
 		"emojis-utils": "^1.0.2",
-		"interactjs": "1.3.4",
+		"interactjs": "1.10.27",
 		"intersection-observer-polyfill": "^0.1.0",
-		"jQuery-QueryBuilder": "^2.5.2",
-		"jquery": "3.5.0",
-		"jquery-ui": "^1.12.1",
+		"jQuery-QueryBuilder": "^3.0.0",
+		"jquery": "3.7.1",
+		"jquery-ui": "^1.14.1",
 		"jszip": "3.2.2",
 		"simple-vdf": "^1.1.1",
-		"uuid": "^8.3.2",
-		"webextension-polyfill": "^0.4.0"
+		"webextension-polyfill": "^0.12.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.10.5",
